--- a/styles/style.css
+++ b/styles/style.css
@@ -134,7 +134,7 @@ section.logo-section .logo img {
 }
 
 section.logo-section .logo h1 {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     margin-left: 1rem;
     text-align: center;
     width: auto;
@@ -262,6 +262,131 @@ nav.navbar ul li a i:hover {
 }
 
 /* main nav ends */
+/* navbar ends */
+
+/*  main content */
+
+/* back poster */
+
+section#main .poster img {
+    height: 400px;
+    width: 100%;
+}
+
+/* back poster ends */
+
+/* quick link anime starts */
+
+section#main .anime {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0;
+    padding: 1rem 0;
+    gap: 2.5rem;
+}
+
+section#main .anime .box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0;
+    padding: 1rem 0;
+    width: 200px;
+    height: 200px;
+    background: #07294d;
+    color: #fff;
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+}
+
+section#main .anime .box:hover {
+    transform: translateY(-10px);
+}
+
+section#main .anime .box img {
+    height: 100px;
+    width: 100px;
+}
+
+section#main .anime .box h3 a {
+    font-size: 1.2rem;
+    color: #fff;
+}
+
+/* anime section ends */
+
+/* from the desk of admin */
+
+section#main .admin-desk {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: start;
+    margin: 1rem 0;
+    padding: 1rem 0;
+    gap: 2.5rem;
+}
+
+section#main .admin-desk .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 1rem 2rem;
+}
+
+section#main .admin-desk .content h3 {
+    font-size: 2.5rem;
+    color: #07294d;
+    margin-bottom: 1rem;
+    text-align: left;
+    width: 100%;
+
+}
+
+section#main .admin-desk .content p {
+    font-size: 1rem;
+    color: #07294d;
+    margin-bottom: 1rem;
+    text-align: justify;
+
+}
+
+section#main .admin-desk .img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0;
+    padding: 1rem 0;
+    gap: 2.5rem;
+
+}
+
+section#main .admin-desk .img img {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    margin: 1rem 0;
+}
+
+/* main ends */
+
+/* footer starts */
+footer {
+    height: 300px;
+}
+
+footer .footer {
+    background-image: url(../images/footer-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 100%;
+    position: relative;
+}
 
 /* utilities */
 
